--- a/src/screens/pageCSS.scss
+++ b/src/screens/pageCSS.scss
@@ -1,3 +1,12 @@
+/* APP CONTAINER */
+
+.App {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+}
+
 /* LANDING PAGE */
 
 .Landing {
